--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "bootstrap": "^4.1.2",
     "font-awesome": "^4.7.0",
     "react": "^16.4.1",
+    "react-bootstrap-sweetalert": "^4.4.1",
     "react-browser-router": "^2.1.2",
     "react-dom": "^16.4.1",
     "react-router-dom": "^4.3.1",
